[package]
name = "xplm-sys"
version = "0.5.1"
authors = ["Sam Crow <samcrow@uw.edu>"]
description = "Low-level bindings for the X-Plane plugin SDK"
repository = "https://github.com/samcrow/xplm-sys"
readme = "README.md"
keywords = ["X-Plane", "plugin"]
categories = ["external-ffi-bindings"]
license = "MIT/Apache-2.0"
edition = "2021"

build = "build.rs"

[build-dependencies]
bindgen = "0.70.1"

[profile.release]
lto = true
